<resources>
    <string name="app_name">MyCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_advance">Advance</string>

    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="clear">Clr</string>
    <string name="delete">Del</string>
    <string name="advance">Adv</string>
    <string name="simple">Simple</string>
    <string name="multiply">X</string>
    <string name="divide">/</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="squreroot">√</string>
    <string name="openBrack">(</string>
    <string name="closeBrack">)</string>
    <string name="sin">Sin</string>
    <string name="cos">Cos</string>
    <string name="tan">Tan</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="e">℮</string>
    <string name="mod">%</string>
    <string name="power">^</string>
    <string name="pi">∏</string>
</resources>
