<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1.0"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.1"
        android:inputType="text"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.1"
        >

        <Button
            android:id="@+id/Advance_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/Delete_btn"
            android:layout_toStartOf="@+id/Delete_btn"
            android:text="@string/advance"
            android:textSize="24dp" />

        <Button
            android:id="@+id/Delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/Clear_btn"
            android:layout_toStartOf="@+id/Clear_btn"
            android:text="@string/delete"
            android:textSize="24dp" />

        <Button
            android:id="@+id/Clear_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/clear"
            android:textSize="24dp" />

    </RelativeLayout>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.8"
        android:columnCount="4"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/No7_btn"
            style="@style/button"
            android:text="@string/number_7"
            />

        <Button
            android:id="@+id/No8_btn"
            style="@style/button"
            android:text="@string/number_8"
            />

        <Button
            android:id="@+id/No9_btn"
            style="@style/button"
            android:text="@string/number_9"
            />

        <Button
            android:id="@+id/Divide_btn"
            style="@style/button"
            android:text="@string/divide"
            />

        <Button
            android:id="@+id/No4_btn"
            style="@style/button"
            android:text="@string/number_4"
            />

        <Button
            android:id="@+id/No5_btn"
            style="@style/button"
            android:text="@string/number_5"
            />

        <Button
            android:id="@+id/No6_btn"
            style="@style/button"
            android:text="@string/number_6"
            />

        <Button
            android:id="@+id/Multiply_btn"
            style="@style/button"
            android:text="@string/multiply"
            />

        <Button
            android:id="@+id/No1_btn"
            style="@style/button"
            android:text="@string/number_1"
            />

        <Button
            android:id="@+id/No2_btn"
            style="@style/button"
            android:text="@string/number_2"
            />

        <Button
            android:id="@+id/No3_btn"
            style="@style/button"
            android:text="@string/number_3"
            />

        <Button
            android:id="@+id/Minus_btn"
            style="@style/button"
            android:text="@string/minus"
            />

        <Button
            android:id="@+id/Dot_btn"
            style="@style/button"
            android:text="@string/dot"
            />

        <Button
            android:id="@+id/No0_btn"
            style="@style/button"
            android:text="@string/number_0"
            />

        <Button
            android:id="@+id/Equal_btn"
            style="@style/button"
            android:text="@string/equal"
            />

        <Button
            android:id="@+id/Plus_btn"
            style="@style/button"
            android:text="@string/plus"
            />
    </GridLayout>
</LinearLayout>
