<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1.0"
    android:orientation="vertical"
    tools:context="com.cs594.wael.mycalculator.Advance">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.1"
        android:inputType="text"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.1"
        >

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/simple"
            android:id="@+id/Simple_btn"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/Delete_btn"
            android:layout_toStartOf="@+id/Delete_btn"
            android:textSize="24dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/Delete_btn"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/Clear_btn"
            android:layout_toStartOf="@+id/Clear_btn"
            android:textSize="24dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:id="@+id/Clear_btn"
            android:layout_alignParentRight="true"
            android:textSize="24dp"
            />

    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.8"
        android:columnCount="3"
        >

        <Button
            style="@style/button"
            android:text="@string/sin"
            android:id="@+id/Sin_btn"
            />
        <Button
            style="@style/button"
            android:text="@string/cos"
            android:id="@+id/Cos_btn"

            />

        <Button
            style="@style/button"
            android:text="@string/tan"
            android:id="@+id/Tan_btn"
            />
        <Button
            style="@style/button"
            android:text="@string/ln"
            android:id="@+id/ln_btn"
            />
        <Button
            style="@style/button"
            android:text="@string/log"
            android:id="@+id/log_btn"
            />
        <Button
            style="@style/button"
            android:text="@string/pi"
            android:id="@+id/Pi_btn"
            />
        <Button
            style="@style/button"
            android:text="@string/e"
            android:id="@+id/e_btn"
            />
        <Button
            style="@style/button"
            android:text="@string/mod"
            android:id="@+id/Mod_btn"
            />
        <Button
            style="@style/button"
            android:text="@string/squreroot"
            android:id="@+id/SquareRt_btn"
            />
        <Button
            style="@style/button"
            android:text="@string/power"
            android:id="@+id/Pow_btn"
            />

        <Button
            style="@style/button"
            android:text="@string/openBrack"
            android:id="@+id/StartCont_btn"
            />

        <Button
            style="@style/button"
            android:text="@string/closeBrack"
            android:id="@+id/EndCont_btn"
            />
    </GridLayout>

</LinearLayout>
